# anti-ttd

./: CMakeLists.txt  README.md  anti-ttd.sln
anti-ttd/: CMakeLists.txt  DebugFilterState.cpp  Handles.cpp  Handles.h  PageGuard.cpp  ParentProcessName.cpp  ParentProcessName.h  anti-ttd.vcxproj  anti-ttd.vcxproj.filters  main.cpp
anti-ttd/include/: DebugFilterState.h  Handles.h  PageGuard.h
anti-ttd/src/: Handles.cpp  ParentProcessName.cpp
assets/: demo.txt
